# stream-audio-fingerprint

./: codegen_demo.js  codegen_landmark.js
rs-landmark/: Cargo.toml
rs-landmark/examples/: async-stdin.rs
rs-landmark/src/: main.rs
rs_landmark/: Cargo.toml
rs_landmark/examples/: async-stdin.rs  stream_ffmpeg_decoder.rs  sync-stdin-ffmpeg.rs  sync-stdin.rs
rs_landmark/src/: main.rs  stdin.rs
tests/: diff-outputs.sh  node-ouput.txt
